@@ -56,6 +56,16 @@ if ($insert_workunit) {
 	// Status go to "Assigned" and Owner is the writer of this Workunit
 	if (($incident["estado"] == 1) AND ($incident["id_creator"] != $config['id_user'])){
 		$sql = sprintf ('UPDATE tincidencia SET id_usuario = "%s", estado = 3,  affected_sla_id = 0, actualizacion = "%s" WHERE id_incidencia = %d', $config['id_user'], $timestamp, $id);
+
+
+		incident_tracking ($id, INCIDENT_STATUS_CHANGED, 3);
+	
+		incident_tracking ($id, INCIDENT_USER_CHANGED, $config["id_user"]);
+
+		$metric_values = array(INCIDENT_METRIC_STATUS => 3,
+						INCIDENT_METRIC_USER => $config["id_user"]);
+
+		incidents_add_incident_stat ($id, $metric_values);
 	} else {
 		$sql = sprintf ('UPDATE tincidencia SET affected_sla_id = 0, actualizacion = "%s" WHERE id_incidencia = %d', $timestamp, $id);
 	}
