@@ -1,3 +1,9 @@
+2013-09-12  Dario Rodriguez <dario@artica.es>
+
+	* operation/incidents/incident_workunits.php: Fixed a problem
+	with incident stats with adding a workunit that changes the user
+	assigned.
+
 2013-09-12  Alejandro Gallardo <alejandro.gallardo@artica.es>
 	
 	* mobile/operation/incident.php: Visual changes.
